--- a/index.html
+++ b/index.html
@@ -38,25 +38,29 @@
         </section>
 
         <footer>
-            <ul class="foot-ul">
-                <a href="#">
-                    <li><img src="images/logo/SL-G.png" /></li
-                ></a>
-                <li><h3>About Spotify</h3></li>
-                <a href=""> <li>Parent Company</li></a>
-                <a href=""> <li>Designer Team</li></a>
-                <a href=""> <li>Developer Team</li></a>
-                <a href=""> <li>Subscription</li></a>
-                <a href=""> <li>Advertisement Info</li></a>
-            </ul>
-            <ul class="foot-ul">
-                <li><h3>Contact And Support</h3></li>
-                <a href=""> <li>User Manual</li></a>
-                <a href=""> <li>Report a bug</li></a>
-                <a href=""> <li>Help & Support</li></a>
-                <a href=""> <li>Contact Service</li></a>
-                <a href=""> <li>Request Refund</li></a>
-            </ul>
+            <a href=""><img src="images/logo/SL-G.png" alt="" /></a>
+            <div class="flex-box">
+                <div class="col">
+                    <h3>About Spotify</h3>
+                    <a href=""> Parent Company</a>
+                    <a href=""> Designer Team</a>
+                    <a href=""> Developer Team</a>
+                    <a href=""> Subscription</a>
+                </div>
+                <div class="col">
+                    <h3>Contact And Support</h3>
+                    <a href=""> User Manual</a>
+                    <a href=""> Report a bug</a>
+                    <a href=""> Help & Support</a>
+                </div>
+                <div class="col">
+                    <h3>About Spotify</h3>
+                    <a href=""> Advertisement Info</a>
+                    <a href=""> Contact Service</a>
+                    <a href=""> Request Refund</a>
+                </div>
+            </div>
+
             <div class="footdiv"></div>
         </footer>
     </body>
