--- a/english.html
+++ b/english.html
@@ -7,6 +7,7 @@
         <title>English</title>
         <link rel="stylesheet" href="style/lang.css" />
         <link rel="icon" type="image/x-icon" href="/images/logo/favicon.png" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     </head>
     <body>
         <nav>
@@ -19,35 +20,43 @@
             <h2>Select your english track</h2>
             <div class="container">
                 <div class="list-song one">
-                    <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <img src="images/Charlie.png" alt="Album Cover Image" />
+                    <h3 onclick="playPause()">Charlie Puth - LightSwitch by Xooos</h3>
+                    <audio id="audio" src="source/Light.mp3"></audio>
                 </div>
                 <div class="list-song two">
                     <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <h3 onclick="playPauseOne()">Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <audio id="audio_one" src="source/OCTILARY.mp3"></audio>
                 </div>
                 <div class="list-song three">
                     <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <h3 onclick="playPause()">Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <audio id="audio_two" src="source/OCTILARY.mp3"></audio>
                 </div>
                 <div class="list-song four">
                     <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <h3 onclick="playPause()">Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <audio id="audio_three" src="source/OCTILARY.mp3"></audio>
                 </div>
                 <div class="list-song five">
                     <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <h3 onclick="playPause()">Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <audio id="audio_four" src="source/OCTILARY.mp3"></audio>
                 </div>
                 <div class="list-song five">
                     <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <h3 onclick="playPause()">Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <audio id="audio_five" src="source/OCTILARY.mp3"></audio>
                 </div>
                 <div class="list-song five">
                     <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <h3 onclick="playPause()">Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <audio id="audio_six" src="source/OCTILARY.mp3"></audio>
                 </div>
             </div>
             <div class="cur-play"></div>
         </section>
+        <script src="script.js/script.js"></script>
     </body>
 </html>
