--- a/malayalam.html
+++ b/malayalam.html
@@ -18,36 +18,61 @@
         <section class="sec-one">
             <h2>Select your malayalam track</h2>
             <div class="container">
-                <div class="list-song one">
-                    <img src="images/ac4.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                <div class="list-song">
+                    <img src="images/images (1).jpeg" alt="Album Cover Image" />
+                    <h3 onclick="playPause()">Bheeshma Parvam Title Track</h3>
+                    <audio
+                        id="audio"
+                        src="source/malayalam/Bheeshma Parvam.mp3"
+                    ></audio>
                 </div>
-                <div class="list-song two">
-                    <img src="images/ac4.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                <div class="list-song">
+                    <img src="images/images (2).jpeg" alt="Album Cover Image" />
+                    <h3 onclick="playPauseOne()">Thee Minnal - Minnal Murali</h3>
+                    <audio
+                        id="audio_one"
+                        src="source/malayalam/Minnal Murali.mp3"
+                    ></audio>
                 </div>
-                <div class="list-song three">
-                    <img src="images/ac4.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                <div class="list-song">
+                    <img src="images/images (3).jpeg" alt="Album Cover Image" />
+                    <h3 onclick="playPauseTwo()">Uyire Song - Minnal Murali</h3>
+                    <audio id="audio_two" src="source/malayalam/Uyire Song _ Minnal Murali _ Tovino Thomas _ Shaan Rahman _ Basil Joseph _ Sophia Paul _Manu Manjith ( 160kbps ).mp3"></audio>
                 </div>
-                <div class="list-song four">
-                    <img src="images/ac4.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                <div class="list-song">
+                    <img src="images/images (4).jpeg" alt="Album Cover Image" />
+                    <h3 onclick="playPauseThree()">UYIRE - Gauthamante Radham</h3>
+                    <audio
+                        id="audio_three"
+                        src="source/malayalam/UYIRE - Video Song Ft. Sid Sriram _ Gauthamante Radham _ Neeraj Madhav _Ankit Menon _Anand Menon _4K ( 160kbps ).mp3"
+                    ></audio>
                 </div>
-                <div class="list-song five">
-                    <img src="images/ac4.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                <div class="list-song">
+                    <img src="images/images.jpeg" alt="Album Cover Image" />
+                    <h3 onclick="playPauseFour()">Payye Veeshum Kaatil Song - Aanandam</h3>
+                    <audio
+                        id="audio_four"
+                        src="source/malayalam/Payye Veeshum Kaatil Lyrical Video Song _ Film Aanandam _ Sachin Warrier _ Anu Elizabeth Jose ( 160kbps ).mp3"
+                    ></audio>
                 </div>
-                <div class="list-song five">
-                    <img src="images/ac4.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                <div class="list-song">
+                    <img src="images/images (1).jpeg" alt="Album Cover Image" />
+                    <h3 onclick="playPauseFive()">Parudeesa Song - Bheeshma Parvam </h3>
+                    <audio id="audio_five" src="source/malayalam/Parudeesa Video Song _ Bheeshma Parvam _ Mammootty _ Amal Neerad _ Sushin Shyam _ Sreenath Bhasi ( 160kbps ).mp3"></audio>
                 </div>
-                <div class="list-song five">
-                    <img src="images/ac4.jpg" alt="Album Cover Image" />
-                    <h3>Axtasia - Light Up The Sky ft.SoundEr</h3>
+                <div class="list-song">
+                    <img src="images/imagesaa.jfif" alt="Album Cover Image" />
+                    <h3 onclick="playPauseSix()">Rasathi Song - Aravindante Athidhikal</h3>
+                    <audio
+                        id="audio_six"
+                        src="source/malayalam/Aravindante Athidhikal _ Rasathi Song Video _ Sreenivasan, Vineeth Sreenivasan _ Shaan Rahman _ HD ( 160kbps ).mp3"
+                    ></audio>
                 </div>
+            </div>
             </div>
             <div class="cur-play"></div>
         </section>
+        <script src="script.js/script.js"></script>
+
     </body>
 </html>
