--- a/english.html
+++ b/english.html
@@ -19,40 +19,55 @@
         <section class="sec-one">
             <h2>Select your english track</h2>
             <div class="container">
-                <div class="list-song one">
+                <div class="list-song">
                     <img src="images/Charlie.png" alt="Album Cover Image" />
-                    <h3 onclick="playPause()">Charlie Puth - LightSwitch by Xooos</h3>
-                    <audio id="audio" src="source/Light.mp3"></audio>
+                    <h3 onclick="playPause()">Arcando - In My Head (feat. Britt Lari)</h3>
+                    <audio
+                        id="audio"
+                        src="source/English/Arcando - In My Head (feat. Britt Lari) _NCS Release_ ( 160kbps ).mp3"
+                    ></audio>
                 </div>
-                <div class="list-song two">
-                    <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3 onclick="playPauseOne()">Axtasia - Light Up The Sky ft.SoundEr</h3>
-                    <audio id="audio_one" src="source/OCTILARY.mp3"></audio>
+                <div class="list-song">
+                    <img src="images/Artwork PSD.png" onclick="playPauseOne()" alt="Album Cover Image" />
+                    <h3 onclick="playPauseOne()">Cartoon & Andromedik - Whatever (ft. Jüri)</h3>
+                    <audio
+                        id="audio_one"
+                        src="source/English/Cartoon & Andromedik - Whatever (ft. Jüri Pootsmann) _NCS Release_ ( 128kbps ).mp3"
+                    ></audio>
                 </div>
-                <div class="list-song three">
-                    <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3 onclick="playPause()">Axtasia - Light Up The Sky ft.SoundEr</h3>
-                    <audio id="audio_two" src="source/OCTILARY.mp3"></audio>
+                <div class="list-song">
+                    <img src="images/TheBest.png" onclick="playPauseTwo()" alt="Album Cover Image" />
+                    <h3 onclick="playPauseTwo()">DigEx - Fall In Love</h3>
+                    <audio id="audio_two" src="source/English/DigEx - Fall In Love _NCS Release_ ( 160kbps ).mp3"></audio>
                 </div>
-                <div class="list-song four">
-                    <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3 onclick="playPause()">Axtasia - Light Up The Sky ft.SoundEr</h3>
-                    <audio id="audio_three" src="source/OCTILARY.mp3"></audio>
+                <div class="list-song">
+                    <img src="images/Tame.png" onclick="playPauseThree()" alt="Album Cover Image" />
+                    <h3 onclick="playPauseThree()">Julius Dreisig & Zeus X Crona - Invisible</h3>
+                    <audio
+                        id="audio_three"
+                        src="source/English/Julius Dreisig & Zeus X Crona - Invisible _NCS Release_ ( 160kbps ).mp3"
+                    ></audio>
                 </div>
-                <div class="list-song five">
-                    <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3 onclick="playPause()">Axtasia - Light Up The Sky ft.SoundEr</h3>
-                    <audio id="audio_four" src="source/OCTILARY.mp3"></audio>
+                <div class="list-song">
+                    <img src="images/T.png" onclick="playPauseFour()" alt="Album Cover Image" />
+                    <h3 onclick="playPauseFour()">NIVIRO - The Edge (feat. Harley Bird)</h3>
+                    <audio
+                        id="audio_four"
+                        src="source/English/NIVIRO - The Edge (feat. Harley Bird) _NCS Release_ ( 160kbps ).mp3"
+                    ></audio>
                 </div>
-                <div class="list-song five">
-                    <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3 onclick="playPause()">Axtasia - Light Up The Sky ft.SoundEr</h3>
-                    <audio id="audio_five" src="source/OCTILARY.mp3"></audio>
+                <div class="list-song ">
+                    <img src="images/Album Art Projects.png" onclick="playPauseFive()" alt="Album Cover Image" />
+                    <h3 onclick="playPauseFive()">Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <audio id="audio_five" src="source/English/Axtasia - Light Up The Sky (feat. Soundr) _NCS Release_ ( 256kbps cbr ).mp3"></audio>
                 </div>
-                <div class="list-song five">
-                    <img src="images/ac1.jpg" alt="Album Cover Image" />
-                    <h3 onclick="playPause()">Axtasia - Light Up The Sky ft.SoundEr</h3>
-                    <audio id="audio_six" src="source/OCTILARY.mp3"></audio>
+                <div class="list-song">
+                    <img src="images/Cosmos.jpeg" onclick="playPauseSix()" alt="Album Cover Image" />
+                    <h3 onclick="playPauseSix()">Sugah ft. Mara Necia - Bring Me The Light</h3>
+                    <audio
+                        id="audio_six"
+                        src="source/English/T & Sugah ft. Mara Necia - Bring Me The Light (Rob Gasser Remix) _NCS Release_ ( 160kbps ).mp3"
+                    ></audio>
                 </div>
             </div>
             <div class="cur-play"></div>
