--- a/english.html
+++ b/english.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>English</title>
         <link rel="stylesheet" href="style/lang.css" />
-        <link rel="icon" type="image/x-icon" href="/images/logo/favicon.png" />
+        <link rel="icon" type="image/x-icon" href="images/logo/favicon.png" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     </head>
     <body>
