--- a/malayalam.html
+++ b/malayalam.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Malayalam</title>
         <link rel="stylesheet" href="style/lang.css" />
-        <link rel="icon" type="image/x-icon" href="/images/logo/favicon.png" />
+        <link rel="icon" type="image/x-icon" href="images/logo/favicon.png" />
     </head>
     <body>
         <nav>
