--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="flex-container">
                 <a href="english.html"><div class="flex-item-left">ENGLISH</div></a>
                 <a href="malayalam.html"><div class="flex-item-center">MALAYALAM</div></a>
-                <a href="hindi.html"><div class="flex-item-right">HINDI</div></a>
+                <a href="oops.html"><div class="flex-item-right">HINDI</div></a>
             </div>
 
             <div class="content-div">
