--- a/malayalam.html
+++ b/malayalam.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Malayalam</title>
         <link rel="stylesheet" href="style/lang.css" />
-        <link rel="icon" type="image/x-icon" href="images/logo/favicon.png" />
+        <link rel="icon" type="image/x-icon" href="/images/logo/favicon.png" />
     </head>
     <body>
         <nav>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="list-song">
                     <img src="images/images (2).jpeg" alt="Album Cover Image" />
-                    <h3 onclick="playPauseOne()">Thee Minnal - Minnal Murali</h3>
+                    <h3 onclick="playPauseOne()">Thee Minnal - Minnal Murali Song</h3>
                     <audio
                         id="audio_one"
                         src="source/malayalam/Minnal Murali.mp3"
@@ -36,7 +36,7 @@
                 </div>
                 <div class="list-song">
                     <img src="images/images (3).jpeg" alt="Album Cover Image" />
-                    <h3 onclick="playPauseTwo()">Uyire Song - Minnal Murali</h3>
+                    <h3 onclick="playPauseTwo()">Uyire Song - Minnal Murali Movie</h3>
                     <audio id="audio_two" src="source/malayalam/Uyire Song _ Minnal Murali _ Tovino Thomas _ Shaan Rahman _ Basil Joseph _ Sophia Paul _Manu Manjith ( 160kbps ).mp3"></audio>
                 </div>
                 <div class="list-song">
@@ -49,7 +49,7 @@
                 </div>
                 <div class="list-song">
                     <img src="images/images.jpeg" alt="Album Cover Image" />
-                    <h3 onclick="playPauseFour()">Payye Veeshum Kaatil Song - Aanandam</h3>
+                    <h3 onclick="playPauseFour()">Payye Veeshum Kaatil - Aanandam</h3>
                     <audio
                         id="audio_four"
                         src="source/malayalam/Payye Veeshum Kaatil Lyrical Video Song _ Film Aanandam _ Sachin Warrier _ Anu Elizabeth Jose ( 160kbps ).mp3"
