--- a/english.html
+++ b/english.html
@@ -19,115 +19,60 @@
         <section class="sec-one">
             <h2>Select your english track</h2>
             <div class="container">
-                <!-- <div class="list-song one">
-                    <img onclick="playPause()" src="images/Album Art Projects.png" alt="Album Cover Image" />
-                    <h3 onclick="playPause()">Arcando - In My Head (feat. Brittss)</h3>
-                    <audio
-                        id="audio"
-                        src="source/English/Arcando - In My Head (feat. Britt Lari) _NCS Release_ ( 160kbps ).mp3"
-                    ></audio>
-                </div>
-                <div class="list-song three">
-                    <img onclick="playPauseOne()" src="images/Album Art Projects.png" alt="Album Cover Image" />
-                    <h3 onclick="playPauseOne()">Sugah ft. Mara - Bring Me The Light</h3>
-                    <audio
-                        id="audio_one"
-                        src="source/English/T & Sugah ft. Mara Necia - Bring Me The Light (Rob Gasser Remix) _NCS Release_ ( 160kbps ).mp3"
-                    ></audio>
-                </div>
-
-                <div class="list-song four">
-                    <img onclick="playPauseTwo()" src="images/Album Art Projects.png" alt="Album Cover Image" />
-                    <h3 onclick="playPauseTwo()">Axtasia - Light Up The Sky (feat. Soundr)</h3>
-                    <audio
-                        id="audio_two"
-                        src="source/English/Axtasia - Light Up The Sky (feat. Soundr) _NCS Release_ ( 256kbps cbr ).mp3"
-                    ></audio>
-                </div>
-                <div class="list-song five">
-                    <img onclick="playPauseThree()" src="images/Album Art Projects.png" alt="Album Cover Image" />
-                    <h3 onclick="playPauseThree()">Cartoon & Andromedik - Whatever (ft. Jüri)</h3>
-                    <audio
-                        id="audio_three"
-                        src="source/English/Cartoon & Andromedik - Whatever (ft. Jüri Pootsmann) _NCS Release_ ( 128kbps ).mp3"
-                    ></audio>
-                </div>
-                <div class="list-song five">
-                    <img onclick="playPauseFour()" src="images/Album Art Projects.png" alt="Album Cover Image" />
-                    <h3 onclick="playPauseFour()">DigEx - Fall In Love NCS Release Fall In Love</h3>
-                    <audio id="audio_four" src="source/English/DigEx - Fall In Love _NCS Release_ ( 160kbps ).mp3"></audio>
-                </div>
-                <div class="list-song five">
-                    <img onclick="playPauseFive()" src="images/Album Art Projects.png" alt="Album Cover Image" />
-                    <h3 onclick="playPauseFive()">Julius Dreisig & Zeus X Crona - Invisible</h3>
-                    <audio
-                        id="audio_five"
-                        src="source/English/Julius Dreisig & Zeus X Crona - Invisible _NCS Release_ ( 160kbps ).mp3"
-                    ></audio>
-                </div>
-                <div class="list-song two">
-                    <img onclick="playPauseSix()" src="images/Album Art Projects.png" alt="Album Cover Image" />
-                    <h3 onclick="playPauseSix()">NIVIRO - The Edge (feat. Harley Bird)</h3>
-                    <audio
-                        id="audio_six"
-                        src="source/English/NIVIRO - The Edge (feat. Harley Bird) _NCS Release_ ( 160kbps ).mp3"
-                    ></audio>
-                </div> -->
                 <div class="list-song">
                     <img src="images/Charlie.png" alt="Album Cover Image" />
-                    <h3 onclick="playPause()">Arcando - In My Head (feat.  Britt  Lari)</h3>
+                    <h3 id="play-1">Arcando - In My Head (feat. Britt Lari)</h3>
                     <audio
                         id="audio"
                         src="source/English/Arcando - In My Head (feat. Britt Lari) _NCS Release_ ( 160kbps ).mp3"
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/Artwork PSD.png" onclick="playPauseOne()" alt="Album Cover Image" />
-                    <h3 onclick="playPauseOne()">Cartoon & Andromedik - Whatever NCS</h3>
+                    <img src="images/Artwork PSD.png" alt="Album Cover Image" />
+                    <h3 id="play-2">Cartoon & Andromedik - Whatever NCS</h3>
                     <audio
                         id="audio_one"
                         src="source/English/Cartoon & Andromedik - Whatever (ft. Jüri Pootsmann) _NCS Release_ ( 128kbps ).mp3"
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/TheBest.png" onclick="playPauseTwo()" alt="Album Cover Image" />
-                    <h3 onclick="playPauseTwo()">DigEx - Fall In Love NCS Release English </h3>
+                    <img src="images/TheBest.png" alt="Album Cover Image" />
+                    <h3 id="play-3">DigEx - Fall In Love NCS Release English</h3>
                     <audio id="audio_two" src="source/English/DigEx - Fall In Love _NCS Release_ ( 160kbps ).mp3"></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/Tame.png" onclick="playPauseThree()" alt="Album Cover Image" />
-                    <h3 onclick="playPauseThree()">Julius Dreisig & Zeus X Crona - Invisible</h3>
+                    <img src="images/Tame.png" alt="Album Cover Image" />
+                    <h3 id="play-4">Julius Dreisig & Zeus X Crona - Invisible</h3>
                     <audio
                         id="audio_three"
                         src="source/English/Julius Dreisig & Zeus X Crona - Invisible _NCS Release_ ( 160kbps ).mp3"
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/T.png" onclick="playPauseFour()" alt="Album Cover Image" />
-                    <h3 onclick="playPauseFour()">NIVIRO - The Edge (feat. Harleys) NCS</h3>
+                    <img src="images/T.png" alt="Album Cover Image" />
+                    <h3 id="play-5">NIVIRO - The Edge (feat. Harleys) NCS</h3>
                     <audio
                         id="audio_four"
                         src="source/English/NIVIRO - The Edge (feat. Harley Bird) _NCS Release_ ( 160kbps ).mp3"
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/Album Art Projects.png" onclick="playPauseFive()" alt="Album Cover Image" />
-                    <h3 onclick="playPauseFive()">Axtasia - Light Up The Sky ft.SoundEr</h3>
+                    <img src="images/Album Art Projects.png" alt="Album Cover Image" />
+                    <h3 id="play-6">Axtasia - Light Up The Sky ft.SoundEr</h3>
                     <audio
                         id="audio_five"
                         src="source/English/Axtasia - Light Up The Sky (feat. Soundr) _NCS Release_ ( 256kbps cbr ).mp3"
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/Cosmos.jpeg" onclick="playPauseSix()" alt="Album Cover Image" />
-                    <h3 onclick="playPauseSix()">Sugah ft. Mara Necia - Bring Me The Light</h3>
+                    <img src="images/Cosmos.jpeg" alt="Album Cover Image" />
+                    <h3 id="play-7">Sugah ft. Mara Necia - Bring Me The Light</h3>
                     <audio
                         id="audio_six"
                         src="source/English/T & Sugah ft. Mara Necia - Bring Me The Light (Rob Gasser Remix) _NCS Release_ ( 160kbps ).mp3"
                     ></audio>
                 </div>
             </div>
-            <div class="cur-play"></div>
         </section>
         <script src="script.js/script.js"></script>
     </body>
