--- a/malayalam.html
+++ b/malayalam.html
@@ -20,7 +20,7 @@
             <div class="container">
                 <div class="list-song">
                     <img src="images/images (1).jpeg" alt="Album Cover Image" />
-                    <h3 onclick="playPause()">Bheeshma Parvam Title Track</h3>
+                    <h3  id="play-1">Bheeshma Parvam Title Track</h3>
                     <audio
                         id="audio"
                         src="source/malayalam/Bheeshma Parvam.mp3"
@@ -28,7 +28,7 @@
                 </div>
                 <div class="list-song">
                     <img src="images/images (2).jpeg" alt="Album Cover Image" />
-                    <h3 onclick="playPauseOne()">Thee Minnal - Minnal Murali Song</h3>
+                    <h3  id="play-2">Thee Minnal - Minnal Murali Song</h3>
                     <audio
                         id="audio_one"
                         src="source/malayalam/Minnal Murali.mp3"
@@ -36,12 +36,12 @@
                 </div>
                 <div class="list-song">
                     <img src="images/images (3).jpeg" alt="Album Cover Image" />
-                    <h3 onclick="playPauseTwo()">Uyire Song - Minnal Murali Movie</h3>
+                    <h3 id="play-3">Uyire Song - Minnal Murali Movie</h3>
                     <audio id="audio_two" src="source/malayalam/Uyire Song _ Minnal Murali _ Tovino Thomas _ Shaan Rahman _ Basil Joseph _ Sophia Paul _Manu Manjith ( 160kbps ).mp3"></audio>
                 </div>
                 <div class="list-song">
                     <img src="images/images (4).jpeg" alt="Album Cover Image" />
-                    <h3 onclick="playPauseThree()">UYIRE - Gauthamante Radham</h3>
+                    <h3 id="play-4">UYIRE - Gauthamante Radham</h3>
                     <audio
                         id="audio_three"
                         src="source/malayalam/UYIRE - Video Song Ft. Sid Sriram _ Gauthamante Radham _ Neeraj Madhav _Ankit Menon _Anand Menon _4K ( 160kbps ).mp3"
@@ -49,7 +49,7 @@
                 </div>
                 <div class="list-song">
                     <img src="images/images.jpeg" alt="Album Cover Image" />
-                    <h3 onclick="playPauseFour()">Payye Veeshum Kaatil - Aanandam</h3>
+                    <h3 id="play-5">Payye Veeshum Kaatil - Aanandam</h3>
                     <audio
                         id="audio_four"
                         src="source/malayalam/Payye Veeshum Kaatil Lyrical Video Song _ Film Aanandam _ Sachin Warrier _ Anu Elizabeth Jose ( 160kbps ).mp3"
@@ -57,12 +57,12 @@
                 </div>
                 <div class="list-song">
                     <img src="images/images (1).jpeg" alt="Album Cover Image" />
-                    <h3 onclick="playPauseFive()">Parudeesa Song - Bheeshma Parvam </h3>
+                    <h3 id="play-6">Parudeesa Song - Bheeshma Parvam </h3>
                     <audio id="audio_five" src="source/malayalam/Parudeesa Video Song _ Bheeshma Parvam _ Mammootty _ Amal Neerad _ Sushin Shyam _ Sreenath Bhasi ( 160kbps ).mp3"></audio>
                 </div>
                 <div class="list-song">
                     <img src="images/imagesaa.jfif" alt="Album Cover Image" />
-                    <h3 onclick="playPauseSix()">Rasathi Song - Aravindante Athidhikal</h3>
+                    <h3 id="play-7">Rasathi Song - Aravindante Athidhikal</h3>
                     <audio
                         id="audio_six"
                         src="source/malayalam/Aravindante Athidhikal _ Rasathi Song Video _ Sreenivasan, Vineeth Sreenivasan _ Shaan Rahman _ HD ( 160kbps ).mp3"
@@ -70,7 +70,6 @@
                 </div>
             </div>
             </div>
-            <div class="cur-play"></div>
         </section>
         <script src="script.js/script.js"></script>
 
