--- a/english.html
+++ b/english.html
@@ -20,7 +20,7 @@
             <h2>Select your english track</h2>
             <div class="container">
                 <div class="list-song">
-                    <img src="images/Charlie.png" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/Charlie.png" alt="Album Cover Image" />
                     <h3 id="play-1">Arcando - In My Head (feat. Britt Lari)</h3>
                     <audio
                         id="audio"
@@ -28,7 +28,7 @@
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/Artwork PSD.png" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/Artwork PSD.png" alt="Album Cover Image" />
                     <h3 id="play-2">Cartoon & Andromedik - Whatever NCS</h3>
                     <audio
                         id="audio_one"
@@ -36,12 +36,12 @@
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/TheBest.png" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/TheBest.png" alt="Album Cover Image" />
                     <h3 id="play-3">DigEx - Fall In Love NCS Release English</h3>
                     <audio id="audio_two" src="source/English/DigEx - Fall In Love _NCS Release_ ( 160kbps ).mp3"></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/Tame.png" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/Tame.png" alt="Album Cover Image" />
                     <h3 id="play-4">Julius Dreisig & Zeus X Crona - Invisible</h3>
                     <audio
                         id="audio_three"
@@ -49,7 +49,7 @@
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/T.png" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/T.png" alt="Album Cover Image" />
                     <h3 id="play-5">NIVIRO - The Edge (feat. Harleys) NCS</h3>
                     <audio
                         id="audio_four"
@@ -57,7 +57,7 @@
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/Album Art Projects.png" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/Album Art Projects.png" alt="Album Cover Image" />
                     <h3 id="play-6">Axtasia - Light Up The Sky ft.SoundEr</h3>
                     <audio
                         id="audio_five"
@@ -65,7 +65,7 @@
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/Cosmos.jpeg" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/Cosmos.jpeg" alt="Album Cover Image" />
                     <h3 id="play-7">Sugah ft. Mara Necia - Bring Me The Light</h3>
                     <audio
                         id="audio_six"
