--- a/malayalam.html
+++ b/malayalam.html
@@ -19,7 +19,7 @@
             <h2>Select your malayalam track</h2>
             <div class="container">
                 <div class="list-song">
-                    <img src="images/images (1).jpeg" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/images (1).jpeg" alt="Album Cover Image" />
                     <h3  id="play-1">Bheeshma Parvam Title Track</h3>
                     <audio
                         id="audio"
@@ -27,7 +27,7 @@
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/images (2).jpeg" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/images (2).jpeg" alt="Album Cover Image" />
                     <h3  id="play-2">Thee Minnal - Minnal Murali Song</h3>
                     <audio
                         id="audio_one"
@@ -35,20 +35,20 @@
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/images (3).jpeg" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/images (3).jpeg" alt="Album Cover Image" />
                     <h3 id="play-3">Uyire Song - Minnal Murali Movie</h3>
                     <audio id="audio_two" src="source/malayalam/Uyire Song _ Minnal Murali _ Tovino Thomas _ Shaan Rahman _ Basil Joseph _ Sophia Paul _Manu Manjith ( 160kbps ).mp3"></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/images (4).jpeg" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/images (4).jpeg" alt="Album Cover Image" />
                     <h3 id="play-4">UYIRE - Gauthamante Radham</h3>
                     <audio
                         id="audio_three"
-                        src="source/malayalam/UYIRE - Video Song Ft. Sid Sriram _ Gauthamante Radham _ Neeraj Madhav _Ankit Menon _Anand Menon _4K ( 160kbps ).mp3"
+                        src="source/malayalam//uyire_video_song_ft_sid_sriram_gauthamante_radham_neeraj_madhav_ankit_menon_anand_menon_4k_-8251538455098531357.mp3"
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/images.jpeg" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/images.jpeg" alt="Album Cover Image" />
                     <h3 id="play-5">Payye Veeshum Kaatil - Aanandam</h3>
                     <audio
                         id="audio_four"
@@ -56,12 +56,12 @@
                     ></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/images (1).jpeg" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/images (1).jpeg" alt="Album Cover Image" />
                     <h3 id="play-6">Parudeesa Song - Bheeshma Parvam </h3>
                     <audio id="audio_five" src="source/malayalam/Parudeesa Video Song _ Bheeshma Parvam _ Mammootty _ Amal Neerad _ Sushin Shyam _ Sreenath Bhasi ( 160kbps ).mp3"></audio>
                 </div>
                 <div class="list-song">
-                    <img src="images/imagesaa.jfif" alt="Album Cover Image" />
+                    <img onclick="pauseAllAudio()" src="images/imagesaa.jfif" alt="Album Cover Image" />
                     <h3 id="play-7">Rasathi Song - Aravindante Athidhikal</h3>
                     <audio
                         id="audio_six"
