--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
 
             <div class="content-div">
                 <h2>Hey Welcome to <span>Static Spotify 2.0</span></h2>
-                <p>
-                    My name is Delbin George im a web designer student who likes to learn more about web design and web
-                    development. I have knowledge in HTML5, CSS3 and a bit JS also i am currently trying to master PHP and
-                    other frameworks. This Clone website is completely built with HTML, CSS and JS. Hope you liked my small
-                    work. I am injecting some lorem here to fill the paragraph a bit Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Perferendis nihil quod beatae iusto odit impedit eveniet similique quasi, veniam a dolor
-                    labore. Nihil quasi assumenda nam. Rerum nemo qui mollitia. Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Necessitatibus error voluptate, nisi impedit odio provident facere ex blanditiis quod.
-                    Soluta quisquam est enim blanditiis! Obcaecati molestias incidunt molestiae enim quidem? lo ~Thank You
+               <p>
+                    My name is Delbin George, I'm a frontend dev who likes to learn more about web designs and
+                    development. I have knowledge in HTML5, CSS3 and a bit JS, also I'm currently trying to master PHP and
+                    other frameworks for backend. This Clone website for Spotify is purely built with HTML, CSS and JS. Hope
+                    you liked my small work. All song which I used here (english,malayalam,hindi) are licensed to respective
+                    creators and i don't own any of these songs, and also I'm not monetizing this website. Now, there is only
+                    few track available in here, but you can hope for more in the future... Contact me on
+                    <a style="color:rgb(0, 153, 255); text-decoration:none;" href="https://www.twitter.com/dellbingeorge"> Twitter</a> ~Thank You
                 </p>
             </div>
         </section>
