--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
             </div>
         </section>
 
-        <footer>
+<footer>
             <a href=""><img src="images/logo/SL-G.png" alt="" /></a>
             <div class="flex-box">
                 <div class="col">
                     <h3>About Spotify</h3>
-                    <a href=""> Parent Company</a>
-                    <a href=""> Designer Team</a>
-                    <a href=""> Developer Team</a>
-                    <a href=""> Subscription</a>
+                    <a href="https://www.twitter.com/dellbingeorge"> Parent Company</a>
+                    <a href="https://www.twitter.com/dellbingeorge"> Designer Team</a>
+                    <a href="https://www.twitter.com/dellbingeorge"> Developer Team</a>
+                    <a href="https://www.twitter.com/dellbingeorge"> Subscription</a>
                 </div>
                 <div class="col">
                     <h3>Contact And Support</h3>
-                    <a href=""> User Manual</a>
-                    <a href=""> Report a bug</a>
-                    <a href=""> Help & Support</a>
+                    <a href="https://www.twitter.com/dellbingeorge"> User Manual</a>
+                    <a href="https://www.twitter.com/dellbingeorge"> Report a bug</a>
+                    <a href="https://www.twitter.com/dellbingeorge"> Help & Support</a>
                 </div>
                 <div class="col">
                     <h3>About Spotify</h3>
-                    <a href=""> Advertisement Info</a>
-                    <a href=""> Contact Service</a>
-                    <a href=""> Request Refund</a>
+                    <a href="https://www.twitter.com/dellbingeorge"> Advertisement Info</a>
+                    <a href="https://www.twitter.com/dellbingeorge"> Contact Service</a>
+                    <a href="https://www.twitter.com/dellbingeorge"> Request Refund</a>
                 </div>
             </div>
 
